--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@types/pdfjs-dist": "^2.10.377",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "pdfjs-dist": "^5.4.394",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.25.76"
