--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "build:server": "vite build --config vite.config.server.ts",
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
+    "test:supabase": "tsx scripts/test-supabase.ts",
     "format.fix": "prettier --write .",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.2",
     "@types/pdfjs-dist": "^2.10.377",
     "bcrypt": "^6.0.0",
-    "better-sqlite3": "^12.4.6",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "pdfjs-dist": "^5.4.394",
-    "sqlite": "^5.1.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -55,7 +55,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
