Fix total score display and load saved performance data
- Add getCountyPerformanceByCountyId function to fetch performance by county ID
- Load saved indicators_json when editing counties or switching sectors
- Fix TypeScript syntax errors in CountyData.jsx (convert to JavaScript)
- Update CountyData to automatically load saved data for selected sector/year
- Ensure total score displays correctly after updating water and waste sectors

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,10 @@ dist-ssr
 .config/
 !.env
 
+# Database files (SQLite - no longer used, migrated to Supabase)
+*.db
+*.db-shm
+*.db-wal
+
 # Ignore all markdown documentation files
 *.md
